--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header id="page_header">
         <div>logo</div>
-        <div> <img src="/images/menu.svg" alt="menu" width="40px"> </div>
+        <div> <img src="/images/menu.svg" alt="menu" width="30px"> </div>
 
     </header>
 
@@ -28,7 +28,7 @@
 
             </div>
             <div>
-                                <h4>I'm a creative webdeveloper activeley looking for work </h4>
+                 <h4>I'm a creative webdeveloper activeley looking for work </h4>
 
             </div>
 
@@ -38,9 +38,7 @@
                 </h3>
 
                 <p>I'm a skilled junior web develover, I'm skilled in both front and back-end web development,
-                    I'm looking for a company to grow with and help and have a meaningful contribution to the growth of
-                    the company by providing visibility to the world through the world-wide web.
-                </p>
+                    I'm looking for a company to grow with.
             </div>
 
       <div>
@@ -59,6 +57,9 @@
                 <p>Edmonton, Alberta</p>
             </div>
     
+            <div>
+                <img src="/images/acebook and twitter icons instagram_3596355.png" alt="" width="100px">
+            </div>
 
         </section>
 
